--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about me</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/616/616494.png">
 </head>
 <body>
     <div class="background-haise"></div>
