--- a/index.html
+++ b/index.html
@@ -33,19 +33,13 @@
             <h2>Галерея</h2>
             <div class="gallery-placeholder">[ Галерея скоро появится ]</div>
         </section>
-        <section class="contacts">
-            <h2>Контакты</h2>
-            <ul>
-                <li><a class="insta-link" href="https://instagram.com/luft3r" target="_blank">Instagram</a></li>
-                <li><a class="telegram-link" href="https://t.me/luft3r" target="_blank">Telegram</a></li>
-                <li><a class="github-link" href="https://github.com/luft3r" target="_blank">GitHub</a></li>
-            </ul>
-        </section>
-        <section class="achievements">
+        <section class="achievements-neo">
             <h2>Достижения</h2>
-            <ul>
-                <li>Сделал свой первый сайт</li>
-                <li>Изучаю CSS и JS</li>
+            <ul class="achievements-list">
+                <li><span class="ach-icon">🌑</span> Первый сайт <div class="ach-progress"><div class="ach-bar" style="width:99%"></div></div></li>
+                <li><span class="ach-icon">💻</span> Изучаю CSS <div class="ach-progress"><div class="ach-bar" style="width:60%"></div></div></li>
+                <li><span class="ach-icon">🧠</span> Изучаю JS <div class="ach-progress"><div class="ach-bar" style="width:25%"></div></div></li>
+                <li><span class="ach-icon">👁️</span> Tokyo Ghoul style <div class="ach-progress"><div class="ach-bar" style="width:90%"></div></div></li>
             </ul>
         </section>
         <section class="about-cards">
@@ -70,16 +64,6 @@
                 <button type="submit">Отправить</button>
             </form>
         </section>
-        <!-- 9. Гостевая книга -->
-        <section class="guestbook">
-            <h2>Гостевая книга</h2>
-            <form class="guestbook-form" autocomplete="off">
-                <input type="text" name="guestname" placeholder="Ваше имя" required>
-                <textarea name="guestmsg" placeholder="Ваш комментарий" required></textarea>
-                <button type="submit">Оставить запись</button>
-            </form>
-            <ul class="guestbook-list"></ul>
-        </section>
         <!-- 12. Кнопки поделиться -->
         <section class="share-block">
             <h2>Поделиться сайтом</h2>
@@ -90,26 +74,24 @@
                 <button class="share-btn" data-share="copy">Скопировать ссылку</button>
             </div>
         </section>
-        <button id="to-top" title="Наверх">▲</button>
-        <!-- Админ-панель для гостевой книги -->
-        <div class="admin-panel" id="admin-panel" style="display:none;">
-            <h3>Админ-панель</h3>
-            <button id="admin-logout">Выйти</button>
-            <ul class="admin-guestbook-list"></ul>
-        </div>
-        <div class="admin-login-block" id="admin-login-block" style="display:none;">
-            <h3>Вход для администратора</h3>
-            <input type="password" id="admin-pass" placeholder="Пароль">
-            <button id="admin-login-btn">Войти</button>
-            <div id="admin-login-error" style="color:#b30024;margin-top:8px;"></div>
-        </div>
+        <!-- 10. Анимированная кнопка наверх -->
+        <button id="to-top" title="Наверх"><span class="ghoul-jump">▲</span></button>
+        <!-- Перенесённые контакты -->
+        <section class="contacts">
+            <h2>Контакты</h2>
+            <ul>
+                <li><a class="insta-link" href="https://instagram.com/luft3r" target="_blank">Instagram</a></li>
+                <li><a class="telegram-link" href="https://t.me/luft3r" target="_blank">Telegram</a></li>
+                <li><a class="github-link" href="https://github.com/luft3r" target="_blank">GitHub</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 luft3r.dev@gmail.com</p>
     </footer>
     <!-- 15. Пасхалка -->
     <div id="easter-egg" title="Пасхалка!" style="display:none;position:fixed;bottom:10px;right:10px;z-index:1000;">
-        <img src="https://i.imgur.com/1Q9Z1Zm.png" alt="Kaneki Mask" style="width:60px;filter:drop-shadow(0 0 16px #b30024cc);">
+        <img src="https://i.imgur.com/u9XcOnv.png" alt="Kaneki Mask" style="width:60px;filter:drop-shadow(0 0 16px #b30024cc);">
     </div>
     <script src="js/script.js"></script>
 </body>
